--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "api-key": "123456",
     "url": "http://127.0.0.1:7474",
     "username": "neo4j",
-    "password": "123"
+    "password": "123qwe"
 }
