--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "api-key": "123456",
-    "url": "http://127.0.0.1:7474",
+    "url": "bolt://irars-neo4j.chewljie.work:7687",
     "username": "neo4j",
     "password": "123qwe"
 }
