[Update] added daterange for mail list

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "api-key": "123456",
-    "url": "bolt://irars-neo4j.chewljie.work:7687",
+    "url": "bolt://localhost:7687",
     "username": "neo4j",
     "password": "123qwe"
 }
